gen/org/modula/parsing/definition/DefinitionParser.java
// This is a generated file. Not intended for manual editing.
package org.modula.parsing.definition;

import org.jetbrains.annotations.*;
import com.intellij.lang.LighterASTNode;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.openapi.diagnostic.Logger;
import static org.modula.parsing.definition.psi.ModulaTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class DefinitionParser implements PsiParser {

  public static Logger LOG_ = Logger.getInstance("org.modula.parsing.definition.DefinitionParser");

  @NotNull
  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    int level_ = 0;
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this);
    if (root_ == ANONYMOUS_PARAMETER) {
      result_ = anonymous_parameter(builder_, level_ + 1);
    }
    else if (root_ == ARRAY_CONSTANT) {
      result_ = array_constant(builder_, level_ + 1);
    }
    else if (root_ == ARRAY_CONSTANT_TYPE) {
      result_ = array_constant_type(builder_, level_ + 1);
    }
    else if (root_ == ARRAY_DECLARATION) {
      result_ = array_declaration(builder_, level_ + 1);
    }
    else if (root_ == ARRAY_DEFINITION) {
      result_ = array_definition(builder_, level_ + 1);
    }
    else if (root_ == ATTRIBUTE) {
      result_ = attribute(builder_, level_ + 1);
    }
    else if (root_ == BASIC_TYPE) {
      result_ = basic_type(builder_, level_ + 1);
    }
    else if (root_ == CALL_PARAMETER) {
      result_ = call_parameter(builder_, level_ + 1);
    }
    else if (root_ == CASE_RANGE) {
      result_ = case_range(builder_, level_ + 1);
    }
    else if (root_ == CASE_STATEMENT) {
      result_ = case_statement(builder_, level_ + 1);
    }
    else if (root_ == COMPLEX_LITERAL) {
      result_ = complex_literal(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_ARRAY_ELEMENT) {
      result_ = constant_array_element(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_DEFINITION) {
      result_ = constant_definition(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_DEFINITIONS) {
      result_ = constant_definitions(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_DESIGNATOR) {
      result_ = constant_designator(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_EXPRESSION) {
      result_ = constant_expression(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_EXPRESSION_VALUE) {
      result_ = constant_expression_value(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_FUNCTION_CALL) {
      result_ = constant_function_call(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_NAME) {
      result_ = constant_name(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_NEGATION) {
      result_ = constant_negation(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_PARAMETER) {
      result_ = constant_parameter(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_PRODUCT) {
      result_ = constant_product(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_SUM) {
      result_ = constant_sum(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_TYPE) {
      result_ = constant_type(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_VALUE) {
      result_ = constant_value(builder_, level_ + 1);
    }
    else if (root_ == CONSTANT_VALUE_MODULE_PARAMETER) {
      result_ = constant_value_module_parameter(builder_, level_ + 1);
    }
    else if (root_ == DEFINITION_FILE) {
      result_ = definitionFile(builder_, level_ + 1);
    }
    else if (root_ == DEFINITION_CLAUSE) {
      result_ = definition_clause(builder_, level_ + 1);
    }
    else if (root_ == DESIGNATOR) {
      result_ = designator(builder_, level_ + 1);
    }
    else if (root_ == DO_STATEMENT) {
      result_ = do_statement(builder_, level_ + 1);
    }
    else if (root_ == ENUMERATION_DEFINITION) {
      result_ = enumeration_definition(builder_, level_ + 1);
    }
    else if (root_ == ENUMERATION_MEMBER_DEFINITION) {
      result_ = enumeration_member_definition(builder_, level_ + 1);
    }
    else if (root_ == ENUMERATION_MEMBER_DESIGNATOR) {
      result_ = enumeration_member_designator(builder_, level_ + 1);
    }
    else if (root_ == ENUMERATION_MEMBER_NAME) {
      result_ = enumeration_member_name(builder_, level_ + 1);
    }
    else if (root_ == EXPORT_NAME_DECLARATION) {
      result_ = export_name_declaration(builder_, level_ + 1);
    }
    else if (root_ == EXPRESSION) {
      result_ = expression(builder_, level_ + 1);
    }
    else if (root_ == EXPRESSION_VALUE) {
      result_ = expression_value(builder_, level_ + 1);
    }
    else if (root_ == FIELD) {
      result_ = field(builder_, level_ + 1);
    }
    else if (root_ == FIELD_NAME) {
      result_ = field_name(builder_, level_ + 1);
    }
    else if (root_ == FIELDS) {
      result_ = fields(builder_, level_ + 1);
    }
    else if (root_ == FOOTER) {
      result_ = footer(builder_, level_ + 1);
    }
    else if (root_ == FUNCTION_CALL) {
      result_ = function_call(builder_, level_ + 1);
    }
    else if (root_ == FUNCTION_DESIGNATOR) {
      result_ = function_designator(builder_, level_ + 1);
    }
    else if (root_ == GENERIC_MODULE_DEFINITION) {
      result_ = generic_module_definition(builder_, level_ + 1);
    }
    else if (root_ == HEADER) {
      result_ = header(builder_, level_ + 1);
    }
    else if (root_ == IF_STATEMENT) {
      result_ = if_statement(builder_, level_ + 1);
    }
    else if (root_ == IGNORED) {
      result_ = ignored(builder_, level_ + 1);
    }
    else if (root_ == IMPORT_CLAUSE) {
      result_ = import_clause(builder_, level_ + 1);
    }
    else if (root_ == IMPORT_SYMBOL) {
      result_ = import_symbol(builder_, level_ + 1);
    }
    else if (root_ == INDEX_TYPE) {
      result_ = index_type(builder_, level_ + 1);
    }
    else if (root_ == INNER_RANGE) {
      result_ = inner_range(builder_, level_ + 1);
    }
    else if (root_ == INTEGER_LITERAL) {
      result_ = integer_literal(builder_, level_ + 1);
    }
    else if (root_ == LITERAL) {
      result_ = literal(builder_, level_ + 1);
    }
    else if (root_ == LOOP_STATEMENT) {
      result_ = loop_statement(builder_, level_ + 1);
    }
    else if (root_ == MACRO_CONSTANT_DEFINITION) {
      result_ = macro_constant_definition(builder_, level_ + 1);
    }
    else if (root_ == MACRO_CONSTANT_DEFINITIONS) {
      result_ = macro_constant_definitions(builder_, level_ + 1);
    }
    else if (root_ == MACRO_DECLARATION) {
      result_ = macro_declaration(builder_, level_ + 1);
    }
    else if (root_ == MACRO_INNER_DECLARATIONS) {
      result_ = macro_inner_declarations(builder_, level_ + 1);
    }
    else if (root_ == MACRO_TYPE_DEFINITION) {
      result_ = macro_type_definition(builder_, level_ + 1);
    }
    else if (root_ == MACRO_TYPE_DEFINITIONS) {
      result_ = macro_type_definitions(builder_, level_ + 1);
    }
    else if (root_ == MACRO_VARIABLE_DEFINITION) {
      result_ = macro_variable_definition(builder_, level_ + 1);
    }
    else if (root_ == MACRO_VARIABLE_DEFINITIONS) {
      result_ = macro_variable_definitions(builder_, level_ + 1);
    }
    else if (root_ == MODULE_DEFINITION) {
      result_ = module_definition(builder_, level_ + 1);
    }
    else if (root_ == MODULE_IMPORT) {
      result_ = module_import(builder_, level_ + 1);
    }
    else if (root_ == MODULE_IMPORT_CLAUSE) {
      result_ = module_import_clause(builder_, level_ + 1);
    }
    else if (root_ == MODULE_NAME) {
      result_ = module_name(builder_, level_ + 1);
    }
    else if (root_ == MODULE_PARAMETER) {
      result_ = module_parameter(builder_, level_ + 1);
    }
    else if (root_ == MODULE_PARAMETER_NAME) {
      result_ = module_parameter_name(builder_, level_ + 1);
    }
    else if (root_ == MODULE_PARAMETERS) {
      result_ = module_parameters(builder_, level_ + 1);
    }
    else if (root_ == NAMED_TYPE) {
      result_ = named_type(builder_, level_ + 1);
    }
    else if (root_ == NEGATION) {
      result_ = negation(builder_, level_ + 1);
    }
    else if (root_ == OPAQUE_TYPE_DEFINITION) {
      result_ = opaque_type_definition(builder_, level_ + 1);
    }
    else if (root_ == PARAMETER) {
      result_ = parameter(builder_, level_ + 1);
    }
    else if (root_ == PARAMETER_NAME) {
      result_ = parameter_name(builder_, level_ + 1);
    }
    else if (root_ == PARAMETERS) {
      result_ = parameters(builder_, level_ + 1);
    }
    else if (root_ == PARAMETERS_COMMA_SEPARATED) {
      result_ = parameters_comma_separated(builder_, level_ + 1);
    }
    else if (root_ == POINTER_DEFINITION) {
      result_ = pointer_definition(builder_, level_ + 1);
    }
    else if (root_ == PREDEFINED_TYPE) {
      result_ = predefined_type(builder_, level_ + 1);
    }
    else if (root_ == PROCEDURE_ATTRIBUTES) {
      result_ = procedure_attributes(builder_, level_ + 1);
    }
    else if (root_ == PROCEDURE_DEFINITION) {
      result_ = procedure_definition(builder_, level_ + 1);
    }
    else if (root_ == PROCEDURE_MODIFIERS) {
      result_ = procedure_modifiers(builder_, level_ + 1);
    }
    else if (root_ == PROCEDURE_NAME) {
      result_ = procedure_name(builder_, level_ + 1);
    }
    else if (root_ == PROCEDURE_TYPE_DEFINITION) {
      result_ = procedure_type_definition(builder_, level_ + 1);
    }
    else if (root_ == PRODUCT) {
      result_ = product(builder_, level_ + 1);
    }
    else if (root_ == RANGE) {
      result_ = range(builder_, level_ + 1);
    }
    else if (root_ == REAL_LITERAL) {
      result_ = real_literal(builder_, level_ + 1);
    }
    else if (root_ == RECORD_CONSTANT) {
      result_ = record_constant(builder_, level_ + 1);
    }
    else if (root_ == RECORD_DEFINITION) {
      result_ = record_definition(builder_, level_ + 1);
    }
    else if (root_ == SELECTOR) {
      result_ = selector(builder_, level_ + 1);
    }
    else if (root_ == SET_DEFINITION) {
      result_ = set_definition(builder_, level_ + 1);
    }
    else if (root_ == SET_DESIGNATOR) {
      result_ = set_designator(builder_, level_ + 1);
    }
    else if (root_ == SET_LITERAL) {
      result_ = set_literal(builder_, level_ + 1);
    }
    else if (root_ == STATEMENT) {
      result_ = statement(builder_, level_ + 1);
    }
    else if (root_ == STATEMENTS) {
      result_ = statements(builder_, level_ + 1);
    }
    else if (root_ == STATIC_FIELD) {
      result_ = static_field(builder_, level_ + 1);
    }
    else if (root_ == STONY_BROOK_TYPE) {
      result_ = stony_brook_type(builder_, level_ + 1);
    }
    else if (root_ == SUM) {
      result_ = sum(builder_, level_ + 1);
    }
    else if (root_ == SYMBOL_IMPORT_CLAUSE) {
      result_ = symbol_import_clause(builder_, level_ + 1);
    }
    else if (root_ == SYMBOL_NAME) {
      result_ = symbol_name(builder_, level_ + 1);
    }
    else if (root_ == TYPE_ALIAS_DEFINITION) {
      result_ = type_alias_definition(builder_, level_ + 1);
    }
    else if (root_ == TYPE_DEFINITION) {
      result_ = type_definition(builder_, level_ + 1);
    }
    else if (root_ == TYPE_DEFINITIONS) {
      result_ = type_definitions(builder_, level_ + 1);
    }
    else if (root_ == TYPE_DESIGNATOR) {
      result_ = type_designator(builder_, level_ + 1);
    }
    else if (root_ == TYPE_NAME) {
      result_ = type_name(builder_, level_ + 1);
    }
    else if (root_ == TYPE_PARAMETER) {
      result_ = type_parameter(builder_, level_ + 1);
    }
    else if (root_ == TYPE_SPECIFICATION) {
      result_ = type_specification(builder_, level_ + 1);
    }
    else if (root_ == VARIABLE_DEFINITION) {
      result_ = variable_definition(builder_, level_ + 1);
    }
    else if (root_ == VARIABLE_DEFINITIONS) {
      result_ = variable_definitions(builder_, level_ + 1);
    }
    else if (root_ == VARIABLE_MODIFIERS) {
      result_ = variable_modifiers(builder_, level_ + 1);
    }
    else if (root_ == VARIABLE_NAME) {
      result_ = variable_name(builder_, level_ + 1);
    }
    else if (root_ == VARIABLE_NAME_DEFINITION) {
      result_ = variable_name_definition(builder_, level_ + 1);
    }
    else if (root_ == VARIANT) {
      result_ = variant(builder_, level_ + 1);
    }
    else if (root_ == VARIANT_FIELD) {
      result_ = variant_field(builder_, level_ + 1);
    }
    else if (root_ == VARIANTS) {
      result_ = variants(builder_, level_ + 1);
    }
    else if (root_ == WHATEVER) {
      result_ = whatever(builder_, level_ + 1);
    }
    else {
      Marker marker_ = builder_.mark();
      enterErrorRecordingSection(builder_, level_, _SECTION_RECOVER_, null);
      result_ = parse_root_(root_, builder_, level_);
      exitErrorRecordingSection(builder_, level_, result_, true, _SECTION_RECOVER_, TOKEN_ADVANCER);
      marker_.done(root_);
    }
    return builder_.getTreeBuilt();
  }

  protected boolean parse_root_(final IElementType root_, final PsiBuilder builder_, final int level_) {
    return root(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // ((VAR (INOUT | OUT)?)| CONST)? (NEAR|FAR|VALUE|NOHIGH)? (ARRAY OF)* type_specification
  public static boolean anonymous_parameter(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter")) return false;
    boolean result_ = false;
    Marker marker_ = builder_.mark();
    enterErrorRecordingSection(builder_, level_, _SECTION_GENERAL_, "<anonymous parameter>");
    result_ = anonymous_parameter_0(builder_, level_ + 1);
    result_ = result_ && anonymous_parameter_1(builder_, level_ + 1);
    result_ = result_ && anonymous_parameter_2(builder_, level_ + 1);
    result_ = result_ && type_specification(builder_, level_ + 1);
    if (result_) {
      marker_.done(ANONYMOUS_PARAMETER);
    }
    else {
      marker_.rollbackTo();
    }
    result_ = exitErrorRecordingSection(builder_, level_, result_, false, _SECTION_GENERAL_, null);
    return result_;
  }

  // ((VAR (INOUT | OUT)?)| CONST)?
  private static boolean anonymous_parameter_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter_0")) return false;
    anonymous_parameter_0_0(builder_, level_ + 1);
    return true;
  }

  // (VAR (INOUT | OUT)?)| CONST
  private static boolean anonymous_parameter_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter_0_0")) return false;
    boolean result_ = false;
    Marker marker_ = builder_.mark();
    result_ = anonymous_parameter_0_0_0(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, CONST);
    if (!result_) {
      marker_.rollbackTo();
    }
    else {
      marker_.drop();
    }
    return result_;
  }

  // VAR (INOUT | OUT)?
  private static boolean anonymous_parameter_0_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter_0_0_0")) return false;
    boolean result_ = false;
    Marker marker_ = builder_.mark();
    result_ = consumeToken(builder_, VAR);
    result_ = result_ && anonymous_parameter_0_0_0_1(builder_, level_ + 1);
    if (!result_) {
      marker_.rollbackTo();
    }
    else {
      marker_.drop();
    }
    return result_;
  }

  // (INOUT | OUT)?
  private static boolean anonymous_parameter_0_0_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter_0_0_0_1")) return false;
    anonymous_parameter_0_0_0_1_0(builder_, level_ + 1);
    return true;
  }

  // INOUT | OUT
  private static boolean anonymous_parameter_0_0_0_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter_0_0_0_1_0")) return false;
    boolean result_ = false;
    Marker marker_ = builder_.mark();
    result_ = consumeToken(builder_, INOUT);
    if (!result_) result_ = consumeToken(builder_, OUT);
    if (!result_) {
      marker_.rollbackTo();
    }
    else {
      marker_.drop();
    }
    return result_;
  }

  // (NEAR|FAR|VALUE|NOHIGH)?
  private static boolean anonymous_parameter_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter_1")) return false;
    anonymous_parameter_1_0(builder_, level_ + 1);
    return true;
  }

  // NEAR|FAR|VALUE|NOHIGH
  private static boolean anonymous_parameter_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter_1_0")) return false;
    boolean result_ = false;
    Marker marker_ = builder_.mark();
    result_ = consumeToken(builder_, NEAR);
    if (!result_) result_ = consumeToken(builder_, FAR);
    if (!result_) result_ = consumeToken(builder_, VALUE);
    if (!result_) result_ = consumeToken(builder_, NOHIGH);
    if (!result_) {
      marker_.rollbackTo();
    }
    else {
      marker_.drop();
    }
    return result_;
  }

  // (ARRAY OF)*
  private static boolean anonymous_parameter_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter_2")) return false;
    int offset_ = builder_.getCurrentOffset();
    while (true) {
      if (!anonymous_parameter_2_0(builder_, level_ + 1)) break;
      int next_offset_ = builder_.getCurrentOffset();
      if (offset_ == next_offset_) {
        empty_element_parsed_guard_(builder_, offset_, "anonymous_parameter_2");
        break;
      }
      offset_ = next_offset_;
    }
    return true;
  }

  // ARRAY OF
  private static boolean anonymous_parameter_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anonymous_parameter_2_0")) return false;
    boolean result_ = false;
    Marker marker_ = builder_.mark();
    result_ = consumeTokens(builder_, 0, ARRAY, OF);
    if (!result_) {
      marker_.rollbackTo();
    }
    else {
      marker_.drop();
    }
    return result_;
  }

  /* ********************************************************** */
